* _code    * how line wrapping works for code we will no longer wrap * rasp-arch-install    * install/media prep issues       * wasn't making the /boot folder before in /root * rasp-arch-next    * spacing issues for the pre code area    * using hostnamectl for meta data useage * about/spec    * added the basic/generic frontmatter for the pages/posts

--- a/source/resources/stylesheets/bedrock/_code.scss
+++ b/source/resources/stylesheets/bedrock/_code.scss
@@ -17,11 +17,12 @@ pre {
 	@include _code;
 	font-family: $font-family-monospace_;
 	padding: unpack(.5rem 1.1rem);
-	white-space: pre-wrap;
-	word-break: break-all;
-	word-wrap: break-word;
+	//white-space: pre-wrap;
+	//word-break: break-all;
+	//word-wrap: break-word;
 	color: white;
 	background-color: $black;
+	overflow-x: auto;
 	code {
 		border:none;
 		font-family: inherit;
